--- a/1.5 LFP Channel STN Parcellation.ipynb
+++ b/1.5 LFP Channel STN Parcellation.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9aedc170-51a9-41dd-ab2c-d9959e489a02",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\a.kaymak\\Anaconda3\\lib\\site-packages\\paramiko\\transport.py:219: CryptographyDeprecationWarning: Blowfish has been deprecated\n",
-      "  \"class\": algorithms.Blowfish,\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -45,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "dc44c92e-8abd-44bd-a1cf-c0e92cd1a09f",
    "metadata": {},
    "outputs": [],
@@ -61,60 +52,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "75aec3fd-b63f-493e-a5da-7f879e1122b6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['SUB_008_EVENTS_ECoG_RECORDINGS.pkl',\n",
-       " 'SUB_008_EVENTS_LFP_RECORDINGS.pkl',\n",
-       " 'SUB_009_EVENTS_ECoG_RECORDINGS.pkl',\n",
-       " 'SUB_009_EVENTS_LFP_RECORDINGS.pkl',\n",
-       " 'SUB_010_EVENTS_ECoG_RECORDINGS.pkl',\n",
-       " 'SUB_010_EVENTS_LFP_RECORDINGS.pkl',\n",
-       " 'SUB_012_EVENTS_ECoG_RECORDINGS.pkl',\n",
-       " 'SUB_012_EVENTS_LFP_RECORDINGS.pkl',\n",
-       " 'SUB_013_EVENTS_ECoG_RECORDINGS.pkl',\n",
-       " 'SUB_013_EVENTS_LFP_RECORDINGS.pkl',\n",
-       " 'SUB_014_EVENTS_ECoG_RECORDINGS.pkl',\n",
-       " 'SUB_014_EVENTS_LFP_RECORDINGS.pkl',\n",
-       " 'SUB_016_EVENTS_ECoG_RECORDINGS.pkl',\n",
-       " 'SUB_016_EVENTS_LFP_RECORDINGS.pkl',\n",
-       " 'SUB_017_EVENTS_ECoG_RECORDINGS.pkl',\n",
-       " 'SUB_017_EVENTS_LFP_RECORDINGS.pkl',\n",
-       " 'SUB_019_EVENTS_ECoG_RECORDINGS.pkl',\n",
-       " 'SUB_019_EVENTS_LFP_RECORDINGS.pkl',\n",
-       " 'SUB_020_EVENTS_ECoG_RECORDINGS.pkl',\n",
-       " 'SUB_020_EVENTS_LFP_RECORDINGS.pkl',\n",
-       " 'SUB_021_EVENTS_ECoG_RECORDINGS.pkl',\n",
-       " 'SUB_021_EVENTS_LFP_RECORDINGS.pkl',\n",
-       " 'SUB_101_EVENTS_LFP_RECORDINGS.pkl',\n",
-       " 'SUB_102_EVENTS_LFP_RECORDINGS.pkl',\n",
-       " 'SUB_103_EVENTS_LFP_RECORDINGS.pkl',\n",
-       " 'SUB_105_EVENTS_LFP_RECORDINGS.pkl',\n",
-       " 'SUB_107_EVENTS_LFP_RECORDINGS.pkl',\n",
-       " 'SUB_108_EVENTS_LFP_RECORDINGS.pkl',\n",
-       " 'SUB_109_EVENTS_LFP_RECORDINGS.pkl']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "event_files"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "4f53b0ef-f116-40be-bbe6-f1316c914f44",
    "metadata": {},
    "source": [
-    "# 1. CREATE THE CHANNEL PARCELLATION MAP DATAFRAME"
+    "# 1. CREATE THE CHANNEL PARCELLATION & MAP DATAFRAME"
    ]
   },
   {
@@ -168,11 +110,11 @@
     "                CONTACT2 = int(CHANNEL.split(\"-\")[1])\n",
     "\n",
     "                # get the contact coordinates\n",
-    "                contact_1_coor = contact_coordinates[(contact_coordinates.patient == int(SUB[1:])) & \n",
+    "                contact_1_coor = contact_coordinates[(contact_coordinates.patient == int(SUB)) & \n",
     "                                                     (contact_coordinates.hemisphere == HEMISPHERE) & \n",
     "                                                     (contact_coordinates.recording_type == \"lfp\") &  \n",
     "                                                     (contact_coordinates.contact == CONTACT1)]\n",
-    "                contact_2_coor = contact_coordinates[(contact_coordinates.patient == int(SUB[1:])) & \n",
+    "                contact_2_coor = contact_coordinates[(contact_coordinates.patient == int(SUB)) & \n",
     "                                                     (contact_coordinates.hemisphere == HEMISPHERE) & \n",
     "                                                     (contact_coordinates.recording_type == \"lfp\") &  \n",
     "                                                     (contact_coordinates.contact == CONTACT2)]\n",
@@ -184,10 +126,14 @@
     "                if((len(contact_1_coor) != 0) & (len(contact_2_coor) != 0)):\n",
     "\n",
     "                    # get the coordinates of the contacts\n",
-    "                    row[\"contact1_area\"]  = basal_ganglia.check_position_in_nucleus(basal_ganglia.STN, HEMISPHERE,\n",
-    "                                                                                    [[float(contact_1_coor.x), float(contact_1_coor.y), float(contact_1_coor.z)]])\n",
-    "                    row[\"contact2_area\"]  = basal_ganglia.check_position_in_nucleus(basal_ganglia.STN, HEMISPHERE,\n",
-    "                                                                                    [[float(contact_2_coor.x), float(contact_2_coor.y), float(contact_2_coor.z)]])\n",
+    "                    try:\n",
+    "                        row[\"contact1_area\"]  = basal_ganglia.check_position_in_nucleus(basal_ganglia.STN, HEMISPHERE,\n",
+    "                                                                                        [[float(contact_1_coor.x), float(contact_1_coor.y), float(contact_1_coor.z)]])\n",
+    "                        row[\"contact2_area\"]  = basal_ganglia.check_position_in_nucleus(basal_ganglia.STN, HEMISPHERE,\n",
+    "                                                                                        [[float(contact_2_coor.x), float(contact_2_coor.y), float(contact_2_coor.z)]])\n",
+    "                    except:\n",
+    "                        print(contact_1_coor)\n",
+    "                        print(contact_2_coor)\n",
     "                    row[\"x\"]              = (float(contact_1_coor.x) + float(contact_2_coor.x)) / 2\n",
     "                    row[\"y\"]              = (float(contact_1_coor.y) + float(contact_2_coor.y)) / 2\n",
     "                    row[\"z\"]              = (float(contact_1_coor.z) + float(contact_2_coor.z)) / 2\n",
@@ -231,19 +177,17 @@
     "# create empty dataframe with same column structure of event dataframes\n",
     "\n",
     "# tapping\n",
-    "df_lfp_tapping_events_motor_area        = pd.DataFrame(columns = ['patient', 'event_no', 'event_category', 'event_laterality', 'event_start_time', 'LFP_hemisphere',\n",
-    "                                                                  'LFP_channel', 'pre_event_recording', 'event_recording', 'post_event_recording', 'CDRS_face', \n",
-    "                                                                  'CDRS_neck', 'CDRS_trunk', 'CDRS_right_leg', 'CDRS_left_leg', 'CDRS_right_hand', 'CDRS_left_hand',\n",
-    "                                                                  'CDRS_total_right', 'CDRS_total_left', 'CDRS_total'])\n",
+    "df_lfp_tapping_events_motor_area        = pd.DataFrame(columns = ['patient', 'event_no', 'event_category', 'event_laterality',\n",
+    "                                                                  'event_start_time', 'duration', 'LFP_hemisphere', 'LFP_channel',\n",
+    "                                                                  'pre_event_recording', 'event_recording', 'post_event_recording',\n",
+    "                                                                  'CDRS_right_hand', 'CDRS_left_hand', 'CDRS_total', 'dyskinesia_arm','dyskinesia_total'])\n",
+    "\n",
+    "\n",
     "df_lfp_tapping_events_associative_area  = pd.DataFrame(columns=df_lfp_tapping_events_motor_area.columns)\n",
     "df_lfp_tapping_events_limbic_area       = pd.DataFrame(columns=df_lfp_tapping_events_motor_area.columns)\n",
     "\n",
     "# involuntary movements\n",
-    "df_lfp_movement_events_motor_area       = pd.DataFrame(columns = ['patient', 'event_no', 'event_category', 'event_laterality', 'event_start_time', 'LFP_hemisphere',\n",
-    "                                                                 'LFP_channel', 'pre_event_recording', 'event_recording', 'post_event_recording', 'CDRS_face', \n",
-    "                                                                 'CDRS_neck', 'CDRS_trunk', 'CDRS_right_leg', 'CDRS_left_leg', 'CDRS_right_hand', 'CDRS_left_hand',\n",
-    "                                                                 'CDRS_total_right', 'CDRS_total_left', 'CDRS_total'])\n",
-    "\n",
+    "df_lfp_movement_events_motor_area       = pd.DataFrame(columns=df_lfp_tapping_events_motor_area.columns)\n",
     "df_lfp_movement_events_associative_area = pd.DataFrame(columns=df_lfp_tapping_events_motor_area.columns)\n",
     "df_lfp_movement_events_limbic_area      = pd.DataFrame(columns=df_lfp_tapping_events_motor_area.columns)"
    ]
@@ -302,7 +246,7 @@
     "                \n",
     "                stn_area =  stn_area_row.iloc[0,8]\n",
     "        \n",
-    "                if(event_category == \"tapping\"):\n",
+    "                if(event_category == \"voluntary\"):\n",
     "                    if(stn_area==\"motor\"):\n",
     "                        df_lfp_tapping_events_motor_area.loc[len(df_lfp_tapping_events_motor_area)] = event_row\n",
     "                    elif(stn_area==\"associative\"):\n",
@@ -333,6 +277,14 @@
     "df_lfp_movement_events_associative_area.to_pickle(DATA_IO.path_events + \"LFP_INVOLUNTARY_MOVEMENT_EVENTS_ASSOCIATIVE_AREA.pkl\")\n",
     "df_lfp_movement_events_limbic_area.to_pickle(DATA_IO.path_events + \"LFP_INVOLUNTARY_MOVEMENT_EVENTS_LIMBIC_AREA.pkl\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9757307e-0d2e-425b-b04e-92eb1dd85d71",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
