--- a/1.5 LFP Channel MNI Coordinates Assignment.ipynb
+++ b/1.5 LFP Channel MNI Coordinates Assignment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +16,7 @@
     "\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
+    "import scikit_posthocs as sp\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
@@ -24,14 +25,14 @@
     "sys.path.insert(0, './lib')\n",
     "sys.path.insert(0, './utils/')\n",
     "\n",
-    "import utils_io, utils_misc\n",
+    "import utils_io, utils_misc, utils_plotting_stn\n",
     "\n",
     "from lib_data import DATA_IO"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,16 +43,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 1. Define the LFP Channel MNI Coordinates"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,12 +92,12 @@
     "            MNI_LFP_channels.loc[len(MNI_LFP_channels)] = row \n",
     "\n",
     "MNI_LFP_channels.drop_duplicates(inplace=True)\n",
-    "MNI_LFP_channels.to_pickle(DATA_IO.path_coordinates + \"MNI_LFP_channels.pkl\")"
+    "MNI_LFP_channels.to_pickle(DATA_IO.path_coordinates + \"MNI_LFP_all_channels.pkl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,138 +141,10 @@
     "            MNI_LFP_channels.loc[len(MNI_LFP_channels)] = row \n",
     "\n",
     "MNI_LFP_channels.drop_duplicates(inplace=True)\n",
-    "MNI_LFP_channels.to_pickle(DATA_IO.path_coordinates + \"MNI_LFP_channels.pkl\")"
+    "MNI_LFP_channels.loc[MNI_LFP_channels['hemisphere'] == 'left', 'x'] = -MNI_LFP_channels.loc[MNI_LFP_channels['hemisphere'] == 'left', 'x']\n",
+    "MNI_LFP_channels = utils_plotting_stn.nuclei_in_out(STN_mesh[\"right_hemisphere\"], MNI_LFP_channels)\n",
+    "MNI_LFP_channels.to_pickle(DATA_IO.path_coordinates + \"MNI_LFP_motor_channels.pkl\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 1. DATA IO"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# load dataframe of LFP tapping events\n",
-    "LFP_PSD                = utils_io.load_LFP_event_PSD(event_category=\"tapping\", event_laterality=\"controlateral\")\n",
-    "# load LFP channel MNI coordinates\n",
-    "MNI_STN_motor_channels = pd.read_pickle(DATA_IO.path_coordinates + \"MNI_LFP_motor_channels.pkl\")\n",
-    "\n",
-    "feature                   = \"event_gamma_mean\"\n",
-    "LFP_feature               = []\n",
-    "\n",
-    "for severity in LFP_PSD.keys():\n",
-    "    STN_dynamic               = LFP_PSD[\"moderate\"][[\"patient\",\"LFP_hemisphere\",\"LFP_channel\",\"event_gamma_mean\"]]\n",
-    "    STN_dynamic[\"hemisphere\"] = STN_dynamic.LFP_hemisphere\n",
-    "    STN_dynamic[\"channel\"]    = STN_dynamic.LFP_channel\n",
-    "    STN_dynamic[\"feature\"]    = STN_dynamic[feature]\n",
-    "    STN_dynamic               = STN_dynamic[[\"patient\",\"hemisphere\",\"channel\",\"feature\"]]\n",
-    "    STN_dynamic               = pd.merge(STN_dynamic, MNI_STN_motor_channels, on=['patient', 'hemisphere', 'channel'], how='inner')\n",
-    "\n",
-    "    # map left hemisphere to right hemisphere\n",
-    "    STN_dynamic.loc[STN_dynamic.hemisphere == \"left\", 'x'] *= -1\n",
-    "    STN_dynamic               = STN_dynamic[[\"patient\",\"feature\",\"x\",\"y\",\"z\"]]\n",
-    "\n",
-    "    if(len(LFP_feature)==0):\n",
-    "        LFP_feature = STN_dynamic\n",
-    "    else:\n",
-    "        LFP_feature = pd.concat([LFP_feature, STN_dynamic], ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = STN_dynamic\n",
-    "import statsmodels.formula.api as smf\n",
-    "from sklearn.metrics import mutual_info_score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "         Mixed Linear Model Regression Results\n",
-      "========================================================\n",
-      "Model:            MixedLM Dependent Variable: feature   \n",
-      "No. Observations: 592     Method:             REML      \n",
-      "No. Groups:       7       Scale:              1791.8103 \n",
-      "Min. group size:  14      Log-Likelihood:     -3061.0790\n",
-      "Max. group size:  231     Converged:          Yes       \n",
-      "Mean group size:  84.6                                  \n",
-      "--------------------------------------------------------\n",
-      "              Coef.  Std.Err.   z   P>|z| [0.025  0.975]\n",
-      "--------------------------------------------------------\n",
-      "Intercept     85.977   10.566 8.137 0.000 65.268 106.686\n",
-      "z             10.749    1.142 9.411 0.000  8.510  12.988\n",
-      "Group Var    380.180    5.864                           \n",
-      "========================================================\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 1. Mixed-Effects Model with patient as random effect\n",
-    "# We are focusing on the z-axis, with random effects for patients.\n",
-    "model = smf.mixedlm(\"feature ~ z\", df, groups=df[\"patient\"])\n",
-    "result = model.fit()\n",
-    "\n",
-    "# Summary of the model\n",
-    "print(result.summary())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mutual Information between z and feature: 0.012826556848421029\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 2. Calculate Mutual Information with respect to z-axis\n",
-    "\n",
-    "# Discretize z-axis and feature to compute mutual information\n",
-    "def discretize(data, num_bins):\n",
-    "    return np.digitize(data, np.histogram(data, bins=num_bins)[1][1:-1])\n",
-    "\n",
-    "z_disc = discretize(df['z'].values, num_bins=5)\n",
-    "feature_disc = discretize(df['feature'].values, num_bins=5)\n",
-    "\n",
-    "# Compute Mutual Information\n",
-    "mi_z = mutual_info_score(z_disc, feature_disc)\n",
-    "print(f\"Mutual Information between z and feature: {mi_z}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
