--- a/5.1 Spectral Coherence Baseline LFP-ECoG.ipynb
+++ b/5.1 Spectral Coherence Baseline LFP-ECoG.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\a.kaymak\\AppData\\Roaming\\Python\\Python39\\site-packages\\pandas\\core\\arrays\\masked.py:60: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.5' currently installed).\n",
-      "  from pandas.core import (\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import public packages and functions\n",
     "import os\n",
@@ -42,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,9 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 1. Measure Baseline Coherence Between LFP and ECOG Channels"
    ]
@@ -69,22 +58,6 @@
     "#baseline_coherence_LFP_ECOG = utils_coherence.extract_baseline_coherence_between_ECOG_LFP_channels()\n",
     "#baseline_coherence_LFP_ECOG.to_pickle(DATA_IO.path_events + \"coherence/ECOG_LFP_BASELINE_COHERENCE.pkl\")\n",
     "baseline_coherence_LFP_ECOG = pd.read_pickle(DATA_IO.path_events + \"coherence/ECOG_LFP_BASELINE_COHERENCE.pkl\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
-   "source": [
-    "# 2. Measure Events Coherence Between LFP and ECOG Channels"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "Initially measure the coherence between events in LFP and ECoG channels and then normalized the event coherence based on the baseline coherence observed in the channel."
    ]
   },
   {
@@ -533,12 +506,289 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "coherence_motor_LID   = pd.read_pickle(DATA_IO.path_events + \"coherence/STN_MOTOR_vs_Cortex_Coherence_LID.pkl\")\n",
     "coherence_motor_noLID = pd.read_pickle(DATA_IO.path_events + \"coherence/STN_MOTOR_vs_Cortex_Coherence_noLID.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>patient</th>\n",
+       "      <th>event_no</th>\n",
+       "      <th>event_start_time</th>\n",
+       "      <th>dyskinesia_arm</th>\n",
+       "      <th>pre_event_coherence</th>\n",
+       "      <th>event_coherence</th>\n",
+       "      <th>post_event_coherence</th>\n",
+       "      <th>LFP_hemisphere</th>\n",
+       "      <th>LFP_channel</th>\n",
+       "      <th>ECoG_hemisphere</th>\n",
+       "      <th>ECoG_channel</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>008</td>\n",
+       "      <td>p_008_right_tapping1</td>\n",
+       "      <td>20.07474</td>\n",
+       "      <td>mild</td>\n",
+       "      <td>[-59.56003940396436, 0.5290049139244929, 53.29...</td>\n",
+       "      <td>[341.5371025986749, 362.18407078847935, 269.31...</td>\n",
+       "      <td>[-73.55957544695197, -47.262681527107084, -28....</td>\n",
+       "      <td>left</td>\n",
+       "      <td>04-01</td>\n",
+       "      <td>left</td>\n",
+       "      <td>02-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>008</td>\n",
+       "      <td>p_008_right_tapping2</td>\n",
+       "      <td>20.160449</td>\n",
+       "      <td>mild</td>\n",
+       "      <td>[266.00969237729373, 336.3203865261619, 292.12...</td>\n",
+       "      <td>[-91.26693606336868, -33.33683677060292, 32.04...</td>\n",
+       "      <td>[-73.79074053986191, -90.9145543357837, -97.51...</td>\n",
+       "      <td>left</td>\n",
+       "      <td>04-01</td>\n",
+       "      <td>left</td>\n",
+       "      <td>02-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>008</td>\n",
+       "      <td>p_008_right_tapping3</td>\n",
+       "      <td>20.247428</td>\n",
+       "      <td>mild</td>\n",
+       "      <td>[-78.98761640959218, -72.89248258953606, -56.2...</td>\n",
+       "      <td>[379.2204523110339, 305.1749470328945, 190.734...</td>\n",
+       "      <td>[-10.846618508595142, -13.904873163733164, -33...</td>\n",
+       "      <td>left</td>\n",
+       "      <td>04-01</td>\n",
+       "      <td>left</td>\n",
+       "      <td>02-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>008</td>\n",
+       "      <td>p_008_right_tapping4</td>\n",
+       "      <td>20.355957</td>\n",
+       "      <td>moderate</td>\n",
+       "      <td>[-24.384843234235763, 8.974180746542409, 27.91...</td>\n",
+       "      <td>[-86.3190984386842, -30.3088037654263, 51.7070...</td>\n",
+       "      <td>[197.03690048802943, 188.57784864140643, 128.2...</td>\n",
+       "      <td>left</td>\n",
+       "      <td>04-01</td>\n",
+       "      <td>left</td>\n",
+       "      <td>02-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>008</td>\n",
+       "      <td>p_008_right_tapping5</td>\n",
+       "      <td>20.501595</td>\n",
+       "      <td>moderate</td>\n",
+       "      <td>[144.22103513972266, 40.558355289478136, -23.6...</td>\n",
+       "      <td>[245.7994048745582, 253.1125660598824, 190.710...</td>\n",
+       "      <td>[-24.492985409009517, 36.24367326683367, 125.2...</td>\n",
+       "      <td>left</td>\n",
+       "      <td>04-01</td>\n",
+       "      <td>left</td>\n",
+       "      <td>02-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4147</th>\n",
+       "      <td>023</td>\n",
+       "      <td>p_023_left_tapping68</td>\n",
+       "      <td>49.505599</td>\n",
+       "      <td>mild</td>\n",
+       "      <td>[-94.81362848530647, -81.92008391424598, -40.2...</td>\n",
+       "      <td>[-37.102758596369696, -38.638835325991444, -43...</td>\n",
+       "      <td>[-95.66661082936851, -98.45494437125917, -99.2...</td>\n",
+       "      <td>right</td>\n",
+       "      <td>07-04</td>\n",
+       "      <td>right</td>\n",
+       "      <td>02-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4148</th>\n",
+       "      <td>023</td>\n",
+       "      <td>p_023_left_tapping69</td>\n",
+       "      <td>55.583333</td>\n",
+       "      <td>mild</td>\n",
+       "      <td>[-60.33275335815856, -56.300169432359716, -56....</td>\n",
+       "      <td>[269.00044655419697, 284.9645096053955, 291.77...</td>\n",
+       "      <td>[5.603845677569737, 8.941707475586538, 6.58823...</td>\n",
+       "      <td>right</td>\n",
+       "      <td>07-04</td>\n",
+       "      <td>right</td>\n",
+       "      <td>02-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4149</th>\n",
+       "      <td>023</td>\n",
+       "      <td>p_023_left_tapping71</td>\n",
+       "      <td>57.339453</td>\n",
+       "      <td>mild</td>\n",
+       "      <td>[-29.460323804850137, -27.956048230881525, -27...</td>\n",
+       "      <td>[-52.03824950488145, -52.62590073282698, -54.1...</td>\n",
+       "      <td>[-33.67786684670636, -39.022715676806534, -39....</td>\n",
+       "      <td>right</td>\n",
+       "      <td>07-04</td>\n",
+       "      <td>right</td>\n",
+       "      <td>02-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4150</th>\n",
+       "      <td>023</td>\n",
+       "      <td>p_023_left_tapping101</td>\n",
+       "      <td>65.435286</td>\n",
+       "      <td>mild</td>\n",
+       "      <td>[29.15343983406903, 43.94236369970624, 62.7233...</td>\n",
+       "      <td>[-94.89872674926573, -92.97134062368198, -91.2...</td>\n",
+       "      <td>[-42.652585267942875, -42.65374495734629, -47....</td>\n",
+       "      <td>right</td>\n",
+       "      <td>07-04</td>\n",
+       "      <td>right</td>\n",
+       "      <td>02-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4151</th>\n",
+       "      <td>023</td>\n",
+       "      <td>p_023_left_tapping102</td>\n",
+       "      <td>66.130892</td>\n",
+       "      <td>mild</td>\n",
+       "      <td>[-86.58599214496004, -78.36776641569013, -63.2...</td>\n",
+       "      <td>[-16.850586121829362, -1.3488192909232954, 12....</td>\n",
+       "      <td>[-96.92826653020997, -99.85656800315991, -97.3...</td>\n",
+       "      <td>right</td>\n",
+       "      <td>07-04</td>\n",
+       "      <td>right</td>\n",
+       "      <td>02-01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4152 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     patient               event_no event_start_time dyskinesia_arm  \\\n",
+       "0        008   p_008_right_tapping1         20.07474           mild   \n",
+       "1        008   p_008_right_tapping2        20.160449           mild   \n",
+       "2        008   p_008_right_tapping3        20.247428           mild   \n",
+       "3        008   p_008_right_tapping4        20.355957       moderate   \n",
+       "4        008   p_008_right_tapping5        20.501595       moderate   \n",
+       "...      ...                    ...              ...            ...   \n",
+       "4147     023   p_023_left_tapping68        49.505599           mild   \n",
+       "4148     023   p_023_left_tapping69        55.583333           mild   \n",
+       "4149     023   p_023_left_tapping71        57.339453           mild   \n",
+       "4150     023  p_023_left_tapping101        65.435286           mild   \n",
+       "4151     023  p_023_left_tapping102        66.130892           mild   \n",
+       "\n",
+       "                                    pre_event_coherence  \\\n",
+       "0     [-59.56003940396436, 0.5290049139244929, 53.29...   \n",
+       "1     [266.00969237729373, 336.3203865261619, 292.12...   \n",
+       "2     [-78.98761640959218, -72.89248258953606, -56.2...   \n",
+       "3     [-24.384843234235763, 8.974180746542409, 27.91...   \n",
+       "4     [144.22103513972266, 40.558355289478136, -23.6...   \n",
+       "...                                                 ...   \n",
+       "4147  [-94.81362848530647, -81.92008391424598, -40.2...   \n",
+       "4148  [-60.33275335815856, -56.300169432359716, -56....   \n",
+       "4149  [-29.460323804850137, -27.956048230881525, -27...   \n",
+       "4150  [29.15343983406903, 43.94236369970624, 62.7233...   \n",
+       "4151  [-86.58599214496004, -78.36776641569013, -63.2...   \n",
+       "\n",
+       "                                        event_coherence  \\\n",
+       "0     [341.5371025986749, 362.18407078847935, 269.31...   \n",
+       "1     [-91.26693606336868, -33.33683677060292, 32.04...   \n",
+       "2     [379.2204523110339, 305.1749470328945, 190.734...   \n",
+       "3     [-86.3190984386842, -30.3088037654263, 51.7070...   \n",
+       "4     [245.7994048745582, 253.1125660598824, 190.710...   \n",
+       "...                                                 ...   \n",
+       "4147  [-37.102758596369696, -38.638835325991444, -43...   \n",
+       "4148  [269.00044655419697, 284.9645096053955, 291.77...   \n",
+       "4149  [-52.03824950488145, -52.62590073282698, -54.1...   \n",
+       "4150  [-94.89872674926573, -92.97134062368198, -91.2...   \n",
+       "4151  [-16.850586121829362, -1.3488192909232954, 12....   \n",
+       "\n",
+       "                                   post_event_coherence LFP_hemisphere  \\\n",
+       "0     [-73.55957544695197, -47.262681527107084, -28....           left   \n",
+       "1     [-73.79074053986191, -90.9145543357837, -97.51...           left   \n",
+       "2     [-10.846618508595142, -13.904873163733164, -33...           left   \n",
+       "3     [197.03690048802943, 188.57784864140643, 128.2...           left   \n",
+       "4     [-24.492985409009517, 36.24367326683367, 125.2...           left   \n",
+       "...                                                 ...            ...   \n",
+       "4147  [-95.66661082936851, -98.45494437125917, -99.2...          right   \n",
+       "4148  [5.603845677569737, 8.941707475586538, 6.58823...          right   \n",
+       "4149  [-33.67786684670636, -39.022715676806534, -39....          right   \n",
+       "4150  [-42.652585267942875, -42.65374495734629, -47....          right   \n",
+       "4151  [-96.92826653020997, -99.85656800315991, -97.3...          right   \n",
+       "\n",
+       "     LFP_channel ECoG_hemisphere ECoG_channel  \n",
+       "0          04-01            left        02-01  \n",
+       "1          04-01            left        02-01  \n",
+       "2          04-01            left        02-01  \n",
+       "3          04-01            left        02-01  \n",
+       "4          04-01            left        02-01  \n",
+       "...          ...             ...          ...  \n",
+       "4147       07-04           right        02-01  \n",
+       "4148       07-04           right        02-01  \n",
+       "4149       07-04           right        02-01  \n",
+       "4150       07-04           right        02-01  \n",
+       "4151       07-04           right        02-01  \n",
+       "\n",
+       "[4152 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coherence_motor_LID"
    ]
   },
   {
